k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: shopping-center
spec:
  type: ClusterIP
  selector: { app: web }
  ports:
    - port: 80
      targetPort: 80
